--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <li><button class="sorts" @click="descending()">Descending</button></li>
         </ul>
     </div>
-    
+
     <!--Shopping cart-->
     <div v-else>
         <nav>
@@ -82,6 +82,29 @@
         </nav>
     </div>
     </div>
+    <div class="checkout">
+        <h1>Your Details</h1>
+        <p style="display: inline; margin-left: px">Name: </p><input @keydown='nameFill()' id="name"
+            oninput="this.value = this.value.replace(/[^A-Z||a-z]/g, '').replace(/(\..*)\./g, '$1');"
+            type="text" style="margin-left: 20px" v-model="order.name">
+
+        <br>
+        <br>
+
+        <p style="display: inline">Phone Number: </p><input id="number" type="text" @keydown='nameFill()'
+            style="margin-left: 6px"
+            oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"
+            v-model="order.number">
+
+        <div id="buttonn">
+            <button id="checkoutBtn" @click="ordered()" hidden></button>
+        </div>
+    </div>
+</div>
+</div>
+</div>
+
+    <script src="lessons.js"></script>
 </body>
 
 </html>
